# spider

./: .gitignore  .gitmodules  LICENSE  README.md  meson.build  meson_options.txt  run.sh
client-gtk/: main.c  meson.build
client-server/: command.c  html.c  html.h  main.c  meson.build  net.h  parser.c  parser.h  server.c  server.h
client-shell/: main.c
client-web/: index.html
common/: command.c  command.h  global_vars.h  log.h  meson.build  util.c  util.h  webkitapi.c  webkitapi.h
compositor/: compositor.c  compositor.h  cursor.c  cursor.h  main.c  meson.build
html/: panel.html
panel/: main.c  meson.build  panel.c  panel.h
protocol/: meson.build  spider-compositor-manager-v1.xml  spider-desktop-manager-v1.xml  spider.xml  wlr-layer-shell-unstable-v1.xml  wlr-layer-shell.xml
server/: client.c  client.h  client_mngr.c  client_mngr.h  command.h  cursor.c  cursor.h  event.c  event.h  html.c  html.h  iter.c  iter.h  main.c  meson.build  net.c  parser.c  parser.h  server.c  server.h  server_backend.c  server_backend.h  spider_assert.h  window.c  window.h
server/backend/: backend.c  backend.h  client.c  client.h  meson.build  server.c  server.h
server/backend/mock/: client.c  client.h  meson.build  mock.c  mock.h  server.c  server.h
server/backend/wlroots/: client.c  client.h  meson.build  output.c  output.h  output_mngr.c  output_mngr.h  server.c  server.h  wlroots.h
server/tests/: meson.build  test_client.c  test_client_mngr.c  test_event.c  test_server.c
server/wlroots/: meson.build  wlroots.c  wlroots.h
shell/: main.c  meson.build  shell.c  shell.h  webkitapi.c
spider/: compositor.c  compositor.h  cursor.c  cursor.h  desktop.c  desktop.h  input.c  input.h  launcher.c  launcher.h  layer.c  layer.h  main.c  meson.build  output.c  output.h  seat.c  seat.h  view.c  view.h  xdg_shell.c  xdg_shell.h
web/: index.html
